compose/envoy/lds.yaml
version_info: 0,
resources:
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: web_listener
    address:
      socket_address:
        address: "0.0.0.0"
        port_value: 80
    filter_chains:
      - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: auto
              stat_prefix: ingress_http
              access_log:
                - name: envoy.file_access_log
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                    path: "/dev/stdout"
              route_config:
                name: local_route
                virtual_hosts:
                  - name: web_backend
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: web
              http_filters:
                - name: envoy.filters.http.jwt_authn
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                    providers:
                      oidc_provider:
                        issuer: https://keycloak:8443/auth/realms/master
                        audiences:
                          - admin-cli
                          - test
                        remote_jwks:
                          http_uri:
                            uri: https://keycloak:8443/auth/realms/master/protocol/openid-connect/certs
                            cluster: keycloak
                            timeout: 5s
                          cache_duration:
                            seconds: 1800
                        payload_in_metadata: verified_jwt
                        forward_payload_header: x-jwt-payload
                    rules:
                      - match:
                          prefix: /oidc
                        requires:
                          provider_name: oidc_provider
                          #provider_and_audiences:
                          #  provider_name: oidc_provider
                          #  audiences:
                          #    test
                    bypass_cors_preflight: true
                - name: envoy.filters.http.wasm
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                    config:
                      name: 3scale-auth
                      root_id: "threescale-wasm-auth"
                      vm_config:
                        vm_id: "1"
                        runtime: envoy.wasm.runtime.v8
                        configuration:
                          "@type": type.googleapis.com/google.protobuf.StringValue
                          value: "vm configuration here!"
                        code:
                          local:
                            filename: "/etc/proxy-wasm/threescale_wasm_auth.wasm"
                        allow_precompiled: false
                      configuration:
                        "@type": type.googleapis.com/google.protobuf.StringValue
                        value: |
                          {
                            "api": "v1",
                            "system": {
                              "name": "system-name",
                              "upstream": {
                                "name": "outbound|443||multitenant.3scale.net",
                                "url": "https://istiodevel-admin.3scale.net/",
                                "timeout": 5000
                              },
                              "token": "atoken"
                            },
                            "backend": {
                              "name": "backend-name",
                              "upstream": {
                                "name": "outbound|443||su1.3scale.net",
                                "url": "https://su1.3scale.net/",
                                "timeout": 5000
                              },
                              "extensions": [
                                "no_body"
                              ]
                            },
                            "services": [
                              {
                                "id": "2555417834780",
                                "token": "service_token",
                                "authorities": [
                                  "*"
                                ],
                                "credentials": {
                                  "app_id": [
                                    {
                                      "header": {
                                        "keys": [
                                          "x-app-id"
                                        ]
                                      }
                                    },
                                    {
                                      "query_string": {
                                        "keys": [
                                          "app_id",
                                          "application_id"
                                        ]
                                      }
                                    },
                                    {
                                      "filter": {
                                        "path": [
                                          "envoy.filters.http.jwt_authn",
                                          "0"
                                        ],
                                        "keys": [
                                          "azp",
                                          "aud"
                                        ]
                                      }
                                    },
                                    {
                                      "header": {
                                        "keys": [
                                          "x-jwt-payload"
                                        ],
                                        "ops": [
                                          {
                                            "decode": "base64_urlsafe"
                                          },
                                          {
                                            "format": {
                                              "json": {
                                                "path": [],
                                                "keys": [
                                                  "azp",
                                                  "aud"
                                                ]
                                              }
                                            }
                                          }
                                        ]
                                      }
                                    },
                                    {
                                      "header": {
                                        "keys": [
                                          "authorization"
                                        ],
                                        "ops": [
                                          {
                                            "string": {
                                              "split": {
                                                "separator": " ",
                                                "max": 2,
                                                "indexes": [1]
                                              }
                                            }
                                          },
                                          {
                                            "decode": "base64_urlsafe"
                                          },
                                          {
                                            "string": {
                                              "split": {
                                                "separator": ":",
                                                "max": 2,
                                                "indexes": [0, 1]
                                              }
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ],
                                  "app_key": [
                                    {
                                      "header": {
                                        "keys": [
                                          "x-app-key"
                                        ]
                                      }
                                    },
                                    {
                                      "query_string": {
                                        "keys": [
                                          "app_key",
                                          "application_key"
                                        ]
                                      }
                                    }
                                  ],
                                  "user_key": [
                                    {
                                      "query_string": {
                                        "keys": [
                                          "api_key"
                                        ],
                                        "ops": [
                                          {
                                            "string": {
                                              "split": {
                                                "separator": ":",
                                                "max": 2,
                                                "indexes": [
                                                  0
                                                ]
                                              }
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                },
                                "mapping_rules": [
                                  {
                                    "method": "GET",
                                    "pattern": "/",
                                    "usages": [
                                      {
                                        "name": "Hits",
                                        "delta": 1
                                      }
                                    ]
                                  },
                                  {
                                    "method": "GET",
                                    "pattern": "/o{*}c",
                                    "usages": [
                                      {
                                        "name": "oidc",
                                        "delta": 1
                                      },
                                      {
                                        "name": "Hits",
                                        "delta": 1
                                      }
                                    ]
                                  },
                                  {
                                    "method": "any",
                                    "pattern": "/{anything}?bigsale={*}",
                                    "usages": [
                                      {
                                        "name": "sale",
                                        "delta": 5
                                      }
                                    ]
                                  }
                                ]
                              }
                            ]
                          }
                      fail_open: false
                - name: envoy.filters.http.router
